--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,17 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>api-v1-client-java-mvn-repo</id>
+			<url>https://raw.githubusercontent.com/blockchain/api-v1-client-java/mvn-repo/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,6 +76,19 @@
 			<artifactId>guava</artifactId>
 			<version>22.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>info.blockchain</groupId>
+			<artifactId>api</artifactId>
+			<version>LATEST</version> <!-- for a specific version see the list of tags -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
