--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=jdbc:h2:~/bitcoin-addresses;mode=MySQL
+# h2
+spring.datasource.url=jdbc:h2:~/blockckain-batch-import
 spring.datasource.user=sa
 spring.datasource.password=
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/bitcoin?useSSL=false
+#spring.datasource.username=u
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+
+
+
 spring.batch.job.enabled=false
 blockchain.file=/Users/x/Downloads/bootstrap.dat
+bloomfilter.file=bloom-filter.dat
